<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Used LinearLayout since all views are aligned in a single direction (vertically) -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_instructions_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/label_instructions"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_instructions_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_default"
                android:text="@string/text_instructions_1"
                android:textSize="@dimen/text_size_default"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/tv_instructions_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_default"
                android:text="@string/text_instructions_2"
                android:textSize="@dimen/text_size_default"
                tools:ignore="VisualLintLongText" />

            <Button
                android:id="@+id/btn_instructions_shoe_listing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:text="@string/label_shoe_list" />

        </LinearLayout>

    </ScrollView>

</layout>
