<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeListingViewModel"
            type="com.udacity.shoestore.viewmodels.ShoeListingViewModel" />
    </data>

    <!-- Used ConstraintLayout due to complexity (both vertical and horizontal arrangements) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_shoe_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/shoe_detail_button_container_height" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/gl_shoe_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".fragments.ShoeDetailFragment">


                <ImageView
                    android:id="@+id/iv_shoe_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:contentDescription="@string/content_desc_iv_shoe_listing_item"
                    android:padding="@dimen/padding_large"
                    android:src="@drawable/img_shoe_white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_shoe_detail_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_default"
                    android:paddingTop="@dimen/padding_default"
                    android:paddingEnd="@dimen/padding_default"
                    android:text="@string/label_shoe_name"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/et_shoe_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_shoe_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="@dimen/target_height_min"
                    android:paddingStart="@dimen/padding_default"
                    android:paddingTop="@dimen/text_padding_top"
                    android:paddingEnd="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_default"
                    android:text="@={shoeListingViewModel.selectedShoeLiveData.name}"
                    android:textSize="@dimen/text_size_default"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/tv_shoe_detail_company_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_default"
                    android:paddingEnd="@dimen/padding_default"
                    android:text="@string/label_shoe_company"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/et_shoe_detail_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_shoe_company"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="@dimen/target_height_min"
                    android:paddingStart="@dimen/padding_default"
                    android:paddingTop="@dimen/text_padding_top"
                    android:paddingEnd="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_default"
                    android:text="@={shoeListingViewModel.selectedShoeLiveData.company}"
                    android:textSize="@dimen/text_size_default"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/tv_shoe_detail_size_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_default"
                    android:paddingEnd="@dimen/padding_default"
                    android:text="@string/label_shoe_size"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/et_shoe_detail_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_shoe_size"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:minHeight="@dimen/target_height_min"
                    android:paddingStart="@dimen/padding_default"
                    android:paddingTop="@dimen/text_padding_top"
                    android:paddingEnd="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_default"
                    android:text="@={`` + shoeListingViewModel.selectedShoeLiveData.size}"
                    android:textSize="@dimen/text_size_default"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/tv_shoe_detail_description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_default"
                    android:paddingEnd="@dimen/padding_default"
                    android:text="@string/label_shoe_description"
                    android:textSize="@dimen/text_size_small" />

                <EditText
                    android:id="@+id/et_shoe_detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="top|start"
                    android:hint="@string/hint_shoe_description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minHeight="@dimen/target_height_min"
                    android:minLines="4"
                    android:paddingStart="@dimen/padding_default"
                    android:paddingTop="@dimen/text_padding_top"
                    android:paddingEnd="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_default"
                    android:scrollbars="none"
                    android:text="@={shoeListingViewModel.selectedShoeLiveData.description}"
                    android:textSize="@dimen/text_size_default"
                    tools:ignore="VisualLintTextFieldSize" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_shoe_detail_cancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default_half"
            android:layout_marginBottom="@dimen/margin_default"
            android:text="@string/label_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_shoe_detail_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_shoe_detail"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_shoe_detail_save"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_default_half"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:text="@string/label_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_shoe_detail_cancel"
            app:layout_constraintTop_toBottomOf="@id/gl_shoe_detail"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
