<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <View
        android:id="@+id/divider_vertical_left"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_divider_vertical_default"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_vertical_right"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_divider_vertical_default"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_login"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/divider_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/divider_vertical_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/label_email"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintStart_toStartOf="@+id/divider_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/hint_login_email"
        android:inputType="textEmailAddress"
        android:paddingTop="@dimen/padding_default"
        android:paddingBottom="@dimen/padding_default"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="@+id/divider_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/divider_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/label_password"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintStart_toStartOf="@+id/divider_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/hint_login_password"
        android:inputType="textPassword"
        android:paddingTop="@dimen/padding_default"
        android:paddingBottom="@dimen/padding_default"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="@+id/divider_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/divider_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/label_login"
        app:layout_constraintEnd_toStartOf="@+id/btn_sign_up"
        app:layout_constraintStart_toStartOf="@+id/divider_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_up"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/divider_vertical_right"
        app:layout_constraintStart_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toTopOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>