<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_welcome_instructions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WelcomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_welcome_vertical_left"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_welcome_vertical_right"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <ImageView
        android:id="@+id/iv_welcome_logo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_default"
        android:contentDescription="@string/content_desc_iv_welcome_logo"
        android:src="@drawable/img_logo"
        app:layout_constraintEnd_toEndOf="@+id/gl_welcome_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/gl_welcome_vertical_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/text_welcome"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="@+id/gl_welcome_vertical_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/gl_welcome_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/iv_welcome_logo"
        tools:ignore="VisualLintLongText" />

    <TextView
        android:id="@+id/tv_welcome_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/text_welcome_instructions"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="@+id/gl_welcome_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/gl_welcome_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_msg" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/label_instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gl_welcome_vertical_right"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>